fix: remove extra padding

--- a/packages/core/src/index.scss
+++ b/packages/core/src/index.scss
@@ -9,23 +9,23 @@ bce-root {
   display: flex;
   flex-flow: column;
 
-  > ::-webkit-scrollbar {
+  ::-webkit-scrollbar {
     background-color: #fff;
     width: 16px;
   }
 
-  > ::-webkit-scrollbar-track {
+  ::-webkit-scrollbar-track {
     background-color: #fff;
   }
 
   /* scrollbar itself */
-  > ::-webkit-scrollbar-thumb {
+  ::-webkit-scrollbar-thumb {
     background-color: #babac0;
     border-radius: 16px;
     border: 4px solid #fff;
   }
 
-  > ::-webkit-scrollbar-button {
+  ::-webkit-scrollbar-button {
     display: none;
   }
 }
@@ -40,7 +40,7 @@ bce-root bce-header {
 
 bce-root main {
   position: relative;
-  padding: 5rem 1rem 82px;
+  padding: 1rem 1rem 82px;
   height: 100%;
   overflow-x: hidden;
 }
